[package]
name = "yusb"
version = "0.1.1"
authors = [
    "Frank Pagliughi <fpagliughi@mindspring.com>",
    "Ilya Averyanov <a1ien.n3t@gmail.com>",
    "David Cuddeback <david.cuddeback@gmail.com>"
]
description = "Rust library for accessing USB devices."
license = "MIT"
homepage = "https://github.com/fpagliughi/yusb"
repository = "https://github.com/fpagliughi/yusb.git"
readme = "README.md"
keywords = ["usb", "libusb", "hardware"]
edition = "2021"
rust-version = "1.60"
build = "build.rs"

[features]
vendored = [ "libusb1-sys/vendored" ]

[dependencies]
libc = "0.2"
once_cell = "1.18"
libusb1-sys = "0.6.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
regex = "1"
usb-ids = "1.2023.0"
